[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background/main_bg.jpg" type="Texture" id=1]
[ext_resource path="res://assets/background/PkmLogo.png" type="Texture" id=2]
[ext_resource path="res://assets/popup/blueButton.png" type="Texture" id=3]
[ext_resource path="res://assets/popup/greenButton.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/chubby-choo-regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/welcome_scene.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBackground" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -172.5
margin_right = 624.0
margin_bottom = 172.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -97.0
margin_right = 97.0
margin_bottom = 104.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 118.0
margin_right = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PvpButton" type="TextureButton" parent="CenterContainer"]
margin_left = 65.0
margin_top = 25.0
margin_right = 144.0
margin_bottom = 72.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/PvpButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -14.5
margin_right = 20.5
margin_bottom = 5.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.227451, 0.180392, 0.180392, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.0470588, 0.0470588, 1 )
text = "PvP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyButton" type="TextureButton" parent="CenterContainer"]
margin_left = 64.0
margin_top = 53.0
margin_right = 143.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/EasyButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -14.5
margin_right = 20.5
margin_bottom = 5.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.227451, 0.180392, 0.180392, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.0470588, 0.0470588, 1 )
text = "Easy AI"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardButton" type="TextureButton" parent="CenterContainer"]
margin_left = 64.0
margin_top = 82.0
margin_right = 143.0
margin_bottom = 129.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/HardButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -14.5
margin_right = 20.5
margin_bottom = 5.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.227451, 0.180392, 0.180392, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.0470588, 0.0470588, 1 )
text = "Hard AI"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/PvpButton" to="." method="_on_PvpButton_pressed"]
[connection signal="pressed" from="CenterContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="CenterContainer/HardButton" to="." method="_on_HardButton_pressed"]
